# wikipedia_extractor

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
