[package]
name = "wiki_extractor"
version = "0.1.0"
edition = "2024"
authors = ["Lennard Kittner"]
description = "A tool and library crate for parsing Wikipedia XML dumps."
readme = "README.md"
repository = "https://github.com/LennardKittner/wikipedia_extractor"
license = "MIT"
keywords = ["Wikipedia", "dump", "XML"]
categories = ["science"]

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
indicatif = "0.18.0"
itertools = "0.14.0"
xml = "1.0"
